# arm-snake

./: .gitignore  Cargo.toml  LICENSE  README.md  arm-snake.pdsprj  arm-snake.pdsprj.DESKTOP-F6NKTBF.Nikita.workspace  build.ps1  memory.x
arm-build/: arm-snake.elf
src/: main.rs
