[package]
name = "arm-snake"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
smart-leds = "0.4.0"
ws2812-spi = "0.5.0"
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"

[dependencies.stm32f4xx-hal]
version = "0.21.0"
features = ["stm32f401"] 
